parser.go
//line ragel/go-parser.rl:1
package ron

import "fmt"
import "errors"

//line ragel/go-parser.rl:7
//line go/parser.go:12
const RON_start int = 14
const RON_first_final int = 14
const RON_error int = 0

const RON_en_main int = 14

//line ragel/go-parser.rl:8

//line ragel/go-parser.rl:9
//line ragel/go-parser.rl:10
//line ragel/go-parser.rl:11
// The parser reached end-of-input (in block mode) or
// the closing dot (in streaming mode) successfully.
// The rest of the input is frame.Rest()
const RON_FULL_STOP = -1

// Parse consumes one op from data[], unless the buffer ends earlier.
// Fills atoms[]
func (frame *Frame) Parse() {

	ps := &frame.Parser

	switch ps.state {
	case RON_error:
		if ps.pos != 0 {
			return
		}

//line go/parser.go:46
		{
			(ps.state) = RON_start
		}

//line ragel/go-parser.rl:30
		frame.position = -1
		frame.atoms = frame._atoms[:4]

	case RON_FULL_STOP:
		ps.state = RON_error
		return

	case RON_start:
		ps.off = ps.pos
		frame.atoms = frame._atoms[:4]
		ps.atm, ps.hlf, ps.dgt = 0, VALUE, 0
	}

	if ps.pos >= len(frame.Body) {
		if !ps.streaming {
			ps.state = RON_error
		}
		return
	}

	pe, eof := len(frame.Body), len(frame.Body)
	n := 0
	_ = eof
	_ = pe // FIXME kill

	if ps.streaming {
		eof = -1
	}

	atm, hlf, dgt := ps.atm, ps.hlf, ps.dgt
	atoms := frame.atoms
	p := ps.pos

//line go/parser.go:86
	{
		if p == pe {
			goto _test_eof
		}
		goto _resume

	_again:
		switch ps.state {
		case 14:
			goto st14
		case 0:
			goto st0
		case 1:
			goto st1
		case 15:
			goto st15
		case 16:
			goto st16
		case 17:
			goto st17
		case 18:
			goto st18
		case 2:
			goto st2
		case 3:
			goto st3
		case 19:
			goto st19
		case 20:
			goto st20
		case 21:
			goto st21
		case 4:
			goto st4
		case 5:
			goto st5
		case 22:
			goto st22
		case 6:
			goto st6
		case 23:
			goto st23
		case 24:
			goto st24
		case 7:
			goto st7
		case 8:
			goto st8
		case 9:
			goto st9
		case 10:
			goto st10
		case 25:
			goto st25
		case 11:
			goto st11
		case 12:
			goto st12
		case 26:
			goto st26
		case 27:
			goto st27
		case 28:
			goto st28
		case 29:
			goto st29
		case 30:
			goto st30
		case 13:
			goto st13
		case 31:
			goto st31
		case 32:
			goto st32
		case 33:
			goto st33
		case 34:
			goto st34
		case 35:
			goto st35
		case 36:
			goto st36
		}

		if p++; p == pe {
			goto _test_eof
		}
	_resume:
		switch ps.state {
		case 14:
			goto st_case_14
		case 0:
			goto st_case_0
		case 1:
			goto st_case_1
		case 15:
			goto st_case_15
		case 16:
			goto st_case_16
		case 17:
			goto st_case_17
		case 18:
			goto st_case_18
		case 2:
			goto st_case_2
		case 3:
			goto st_case_3
		case 19:
			goto st_case_19
		case 20:
			goto st_case_20
		case 21:
			goto st_case_21
		case 4:
			goto st_case_4
		case 5:
			goto st_case_5
		case 22:
			goto st_case_22
		case 6:
			goto st_case_6
		case 23:
			goto st_case_23
		case 24:
			goto st_case_24
		case 7:
			goto st_case_7
		case 8:
			goto st_case_8
		case 9:
			goto st_case_9
		case 10:
			goto st_case_10
		case 25:
			goto st_case_25
		case 11:
			goto st_case_11
		case 12:
			goto st_case_12
		case 26:
			goto st_case_26
		case 27:
			goto st_case_27
		case 28:
			goto st_case_28
		case 29:
			goto st_case_29
		case 30:
			goto st_case_30
		case 13:
			goto st_case_13
		case 31:
			goto st_case_31
		case 32:
			goto st_case_32
		case 33:
			goto st_case_33
		case 34:
			goto st_case_34
		case 35:
			goto st_case_35
		case 36:
			goto st_case_36
		}
		goto st_out
	st14:
		if p++; p == pe {
			goto _test_eof14
		}
	st_case_14:
		switch (frame.Body)[p] {
		case 32:
			goto st1
		case 33:
			goto tr2
		case 35:
			goto tr3
		case 39:
			goto tr4
		case 42:
			goto tr3
		case 44:
			goto tr2
		case 46:
			goto tr30
		case 58:
			goto tr3
		case 59:
			goto tr2
		case 61:
			goto tr5
		case 62:
			goto tr6
		case 63:
			goto tr2
		case 64:
			goto tr3
		case 94:
			goto tr7
		}
		if 9 <= (frame.Body)[p] && (frame.Body)[p] <= 13 {
			goto st1
		}
		goto st0
	st_case_0:
	st0:
		(ps.state) = 0
		goto _out
	tr159:
//line ragel/../ragel/base-grammar.rl:32
		atm++

//line ragel/../ragel/base-grammar.rl:140

//line ragel/../ragel/base-grammar.rl:136
		frame.position++

		goto st1
	st1:
		if p++; p == pe {
			goto _test_eof1
		}
	st_case_1:
//line go/parser.go:313
		switch (frame.Body)[p] {
		case 32:
			goto st1
		case 33:
			goto tr2
		case 35:
			goto tr3
		case 39:
			goto tr4
		case 42:
			goto tr3
		case 44:
			goto tr2
		case 58:
			goto tr3
		case 59:
			goto tr2
		case 61:
			goto tr5
		case 62:
			goto tr6
		case 63:
			goto tr2
		case 64:
			goto tr3
		case 94:
			goto tr7
		}
		if 9 <= (frame.Body)[p] && (frame.Body)[p] <= 13 {
			goto st1
		}
		goto st0
	tr2:
		(ps.state) = 15
//line ragel/../ragel/base-grammar.rl:120
		hlf = 0
		if p > ps.off && frame.position != -1 {
			// one op is done, so stop parsing for now
			// make sure the parser restarts with the next op
			p--
			(ps.state) = (RON_start)
			{
				p++
				goto _out
			}
		} else {
			//op_idx++;
			if frame.term != TERM_RAW {
				frame.term = TERM_REDUCED
			}
		}

//line ragel/../ragel/base-grammar.rl:116
		frame.term = int(ABC[(frame.Body)[p]])

		goto _again
	tr32:
		(ps.state) = 15
//line ragel/../ragel/base-grammar.rl:136
		frame.position++

//line ragel/../ragel/base-grammar.rl:120
		hlf = 0
		if p > ps.off && frame.position != -1 {
			// one op is done, so stop parsing for now
			// make sure the parser restarts with the next op
			p--
			(ps.state) = (RON_start)
			{
				p++
				goto _out
			}
		} else {
			//op_idx++;
			if frame.term != TERM_RAW {
				frame.term = TERM_REDUCED
			}
		}

//line ragel/../ragel/base-grammar.rl:116
		frame.term = int(ABC[(frame.Body)[p]])

		goto _again
	tr40:
//line ragel/../ragel/base-grammar.rl:32
		atm++

//line ragel/../ragel/base-grammar.rl:140

//line ragel/../ragel/base-grammar.rl:116
		frame.term = int(ABC[(frame.Body)[p]])

		goto st15
	tr55:
//line ragel/../ragel/base-grammar.rl:40
		atm++

//line ragel/../ragel/base-grammar.rl:113

//line ragel/../ragel/base-grammar.rl:116
		frame.term = int(ABC[(frame.Body)[p]])

		goto st15
	tr63:
//line ragel/../ragel/base-grammar.rl:113
//line ragel/../ragel/base-grammar.rl:116
		frame.term = int(ABC[(frame.Body)[p]])

		goto st15
	tr71:
//line ragel/../ragel/base-grammar.rl:55
		atoms[atm].set2(ORIGIN, 31, ATOM_INT)

//line ragel/../ragel/base-grammar.rl:40
		atm++

//line ragel/../ragel/base-grammar.rl:113

//line ragel/../ragel/base-grammar.rl:116
		frame.term = int(ABC[(frame.Body)[p]])

		goto st15
	tr79:
//line ragel/../ragel/base-grammar.rl:103
		atoms[atm].set2(ORIGIN, 31, ATOM_UUID)

//line ragel/../ragel/base-grammar.rl:40
		atm++

//line ragel/../ragel/base-grammar.rl:113

//line ragel/../ragel/base-grammar.rl:116
		frame.term = int(ABC[(frame.Body)[p]])

		goto st15
	tr89:
//line ragel/../ragel/./uuid-grammar.rl:37

//line ragel/../ragel/base-grammar.rl:103
		atoms[atm].set2(ORIGIN, 31, ATOM_UUID)

//line ragel/../ragel/base-grammar.rl:40
		atm++

//line ragel/../ragel/base-grammar.rl:113

//line ragel/../ragel/base-grammar.rl:116
		frame.term = int(ABC[(frame.Body)[p]])

		goto st15
	tr98:
//line ragel/../ragel/base-grammar.rl:84
		atoms[atm].set2(ORIGIN, 31, ATOM_FLOAT)

//line ragel/../ragel/base-grammar.rl:40
		atm++

//line ragel/../ragel/base-grammar.rl:113

//line ragel/../ragel/base-grammar.rl:116
		frame.term = int(ABC[(frame.Body)[p]])

		goto st15
	tr108:
//line ragel/../ragel/./uuid-grammar.rl:34

//line ragel/../ragel/base-grammar.rl:103
		atoms[atm].set2(ORIGIN, 31, ATOM_UUID)

//line ragel/../ragel/base-grammar.rl:40
		atm++

//line ragel/../ragel/base-grammar.rl:113

//line ragel/../ragel/base-grammar.rl:116
		frame.term = int(ABC[(frame.Body)[p]])

		goto st15
	tr119:
//line ragel/../ragel/./uuid-grammar.rl:34

//line ragel/../ragel/./uuid-grammar.rl:50
		atoms[atm][1] = UUID_NAME_FLAG

//line ragel/../ragel/base-grammar.rl:103
		atoms[atm].set2(ORIGIN, 31, ATOM_UUID)

//line ragel/../ragel/base-grammar.rl:40
		atm++

//line ragel/../ragel/base-grammar.rl:113

//line ragel/../ragel/base-grammar.rl:116
		frame.term = int(ABC[(frame.Body)[p]])

		goto st15
	tr129:
//line ragel/../ragel/./uuid-grammar.rl:37

//line ragel/../ragel/base-grammar.rl:32
		atm++

//line ragel/../ragel/base-grammar.rl:140

//line ragel/../ragel/base-grammar.rl:116
		frame.term = int(ABC[(frame.Body)[p]])

		goto st15
	tr139:
//line ragel/../ragel/./uuid-grammar.rl:34

//line ragel/../ragel/base-grammar.rl:32
		atm++

//line ragel/../ragel/base-grammar.rl:140

//line ragel/../ragel/base-grammar.rl:116
		frame.term = int(ABC[(frame.Body)[p]])

		goto st15
	tr150:
//line ragel/../ragel/./uuid-grammar.rl:34

//line ragel/../ragel/./uuid-grammar.rl:50
		atoms[atm][1] = UUID_NAME_FLAG

//line ragel/../ragel/base-grammar.rl:32
		atm++

//line ragel/../ragel/base-grammar.rl:140

//line ragel/../ragel/base-grammar.rl:116
		frame.term = int(ABC[(frame.Body)[p]])

		goto st15
	st15:
		if p++; p == pe {
			goto _test_eof15
		}
	st_case_15:
//line go/parser.go:603
		switch (frame.Body)[p] {
		case 32:
			goto st15
		case 33:
			goto tr32
		case 35:
			goto tr33
		case 39:
			goto tr34
		case 42:
			goto tr33
		case 44:
			goto tr32
		case 46:
			goto tr35
		case 58:
			goto tr33
		case 59:
			goto tr32
		case 61:
			goto tr36
		case 62:
			goto tr37
		case 63:
			goto tr32
		case 64:
			goto tr33
		case 94:
			goto tr38
		}
		if 9 <= (frame.Body)[p] && (frame.Body)[p] <= 13 {
			goto st15
		}
		goto st0
	tr3:
		(ps.state) = 16
//line ragel/../ragel/base-grammar.rl:120
		hlf = 0
		if p > ps.off && frame.position != -1 {
			// one op is done, so stop parsing for now
			// make sure the parser restarts with the next op
			p--
			(ps.state) = (RON_start)
			{
				p++
				goto _out
			}
		} else {
			//op_idx++;
			if frame.term != TERM_RAW {
				frame.term = TERM_REDUCED
			}
		}

//line ragel/../ragel/base-grammar.rl:6
		ps.omitted = 15

//line ragel/../ragel/base-grammar.rl:16
		n = (int)(ABC[(frame.Body)[p]])
		hlf, dgt = 0, 0
		if n < atm {
			// parse #op1#op2#op3 without Ragel state explosion
			(ps.state) = (RON_start)
			frame.position++
			p--
			{
				p++
				goto _out
			}
		} else {
			// next UUID
			atm = n
			ps.omitted -= 1 << uint(n)
		}

		goto _again
	tr33:
		(ps.state) = 16
//line ragel/../ragel/base-grammar.rl:136
		frame.position++

//line ragel/../ragel/base-grammar.rl:120
		hlf = 0
		if p > ps.off && frame.position != -1 {
			// one op is done, so stop parsing for now
			// make sure the parser restarts with the next op
			p--
			(ps.state) = (RON_start)
			{
				p++
				goto _out
			}
		} else {
			//op_idx++;
			if frame.term != TERM_RAW {
				frame.term = TERM_REDUCED
			}
		}

//line ragel/../ragel/base-grammar.rl:6
		ps.omitted = 15

//line ragel/../ragel/base-grammar.rl:16
		n = (int)(ABC[(frame.Body)[p]])
		hlf, dgt = 0, 0
		if n < atm {
			// parse #op1#op2#op3 without Ragel state explosion
			(ps.state) = (RON_start)
			frame.position++
			p--
			{
				p++
				goto _out
			}
		} else {
			// next UUID
			atm = n
			ps.omitted -= 1 << uint(n)
		}

		goto _again
	tr41:
		(ps.state) = 16
//line ragel/../ragel/base-grammar.rl:32
		atm++

//line ragel/../ragel/base-grammar.rl:16
		n = (int)(ABC[(frame.Body)[p]])
		hlf, dgt = 0, 0
		if n < atm {
			// parse #op1#op2#op3 without Ragel state explosion
			(ps.state) = (RON_start)
			frame.position++
			p--
			{
				p++
				goto _out
			}
		} else {
			// next UUID
			atm = n
			ps.omitted -= 1 << uint(n)
		}

		goto _again
	tr56:
		(ps.state) = 16
//line ragel/../ragel/base-grammar.rl:40
		atm++

//line ragel/../ragel/base-grammar.rl:113

//line ragel/../ragel/base-grammar.rl:136
		frame.position++

//line ragel/../ragel/base-grammar.rl:120
		hlf = 0
		if p > ps.off && frame.position != -1 {
			// one op is done, so stop parsing for now
			// make sure the parser restarts with the next op
			p--
			(ps.state) = (RON_start)
			{
				p++
				goto _out
			}
		} else {
			//op_idx++;
			if frame.term != TERM_RAW {
				frame.term = TERM_REDUCED
			}
		}

//line ragel/../ragel/base-grammar.rl:6
		ps.omitted = 15

//line ragel/../ragel/base-grammar.rl:16
		n = (int)(ABC[(frame.Body)[p]])
		hlf, dgt = 0, 0
		if n < atm {
			// parse #op1#op2#op3 without Ragel state explosion
			(ps.state) = (RON_start)
			frame.position++
			p--
			{
				p++
				goto _out
			}
		} else {
			// next UUID
			atm = n
			ps.omitted -= 1 << uint(n)
		}

		goto _again
	tr64:
		(ps.state) = 16
//line ragel/../ragel/base-grammar.rl:113

//line ragel/../ragel/base-grammar.rl:136
		frame.position++

//line ragel/../ragel/base-grammar.rl:120
		hlf = 0
		if p > ps.off && frame.position != -1 {
			// one op is done, so stop parsing for now
			// make sure the parser restarts with the next op
			p--
			(ps.state) = (RON_start)
			{
				p++
				goto _out
			}
		} else {
			//op_idx++;
			if frame.term != TERM_RAW {
				frame.term = TERM_REDUCED
			}
		}

//line ragel/../ragel/base-grammar.rl:6
		ps.omitted = 15

//line ragel/../ragel/base-grammar.rl:16
		n = (int)(ABC[(frame.Body)[p]])
		hlf, dgt = 0, 0
		if n < atm {
			// parse #op1#op2#op3 without Ragel state explosion
			(ps.state) = (RON_start)
			frame.position++
			p--
			{
				p++
				goto _out
			}
		} else {
			// next UUID
			atm = n
			ps.omitted -= 1 << uint(n)
		}

		goto _again
	tr72:
		(ps.state) = 16
//line ragel/../ragel/base-grammar.rl:55
		atoms[atm].set2(ORIGIN, 31, ATOM_INT)

//line ragel/../ragel/base-grammar.rl:40
		atm++

//line ragel/../ragel/base-grammar.rl:113

//line ragel/../ragel/base-grammar.rl:136
		frame.position++

//line ragel/../ragel/base-grammar.rl:120
		hlf = 0
		if p > ps.off && frame.position != -1 {
			// one op is done, so stop parsing for now
			// make sure the parser restarts with the next op
			p--
			(ps.state) = (RON_start)
			{
				p++
				goto _out
			}
		} else {
			//op_idx++;
			if frame.term != TERM_RAW {
				frame.term = TERM_REDUCED
			}
		}

//line ragel/../ragel/base-grammar.rl:6
		ps.omitted = 15

//line ragel/../ragel/base-grammar.rl:16
		n = (int)(ABC[(frame.Body)[p]])
		hlf, dgt = 0, 0
		if n < atm {
			// parse #op1#op2#op3 without Ragel state explosion
			(ps.state) = (RON_start)
			frame.position++
			p--
			{
				p++
				goto _out
			}
		} else {
			// next UUID
			atm = n
			ps.omitted -= 1 << uint(n)
		}

		goto _again
	tr80:
		(ps.state) = 16
//line ragel/../ragel/base-grammar.rl:103
		atoms[atm].set2(ORIGIN, 31, ATOM_UUID)

//line ragel/../ragel/base-grammar.rl:40
		atm++

//line ragel/../ragel/base-grammar.rl:113

//line ragel/../ragel/base-grammar.rl:136
		frame.position++

//line ragel/../ragel/base-grammar.rl:120
		hlf = 0
		if p > ps.off && frame.position != -1 {
			// one op is done, so stop parsing for now
			// make sure the parser restarts with the next op
			p--
			(ps.state) = (RON_start)
			{
				p++
				goto _out
			}
		} else {
			//op_idx++;
			if frame.term != TERM_RAW {
				frame.term = TERM_REDUCED
			}
		}

//line ragel/../ragel/base-grammar.rl:6
		ps.omitted = 15

//line ragel/../ragel/base-grammar.rl:16
		n = (int)(ABC[(frame.Body)[p]])
		hlf, dgt = 0, 0
		if n < atm {
			// parse #op1#op2#op3 without Ragel state explosion
			(ps.state) = (RON_start)
			frame.position++
			p--
			{
				p++
				goto _out
			}
		} else {
			// next UUID
			atm = n
			ps.omitted -= 1 << uint(n)
		}

		goto _again
	tr90:
		(ps.state) = 16
//line ragel/../ragel/./uuid-grammar.rl:37

//line ragel/../ragel/base-grammar.rl:103
		atoms[atm].set2(ORIGIN, 31, ATOM_UUID)

//line ragel/../ragel/base-grammar.rl:40
		atm++

//line ragel/../ragel/base-grammar.rl:113

//line ragel/../ragel/base-grammar.rl:136
		frame.position++

//line ragel/../ragel/base-grammar.rl:120
		hlf = 0
		if p > ps.off && frame.position != -1 {
			// one op is done, so stop parsing for now
			// make sure the parser restarts with the next op
			p--
			(ps.state) = (RON_start)
			{
				p++
				goto _out
			}
		} else {
			//op_idx++;
			if frame.term != TERM_RAW {
				frame.term = TERM_REDUCED
			}
		}

//line ragel/../ragel/base-grammar.rl:6
		ps.omitted = 15

//line ragel/../ragel/base-grammar.rl:16
		n = (int)(ABC[(frame.Body)[p]])
		hlf, dgt = 0, 0
		if n < atm {
			// parse #op1#op2#op3 without Ragel state explosion
			(ps.state) = (RON_start)
			frame.position++
			p--
			{
				p++
				goto _out
			}
		} else {
			// next UUID
			atm = n
			ps.omitted -= 1 << uint(n)
		}

		goto _again
	tr99:
		(ps.state) = 16
//line ragel/../ragel/base-grammar.rl:84
		atoms[atm].set2(ORIGIN, 31, ATOM_FLOAT)

//line ragel/../ragel/base-grammar.rl:40
		atm++

//line ragel/../ragel/base-grammar.rl:113

//line ragel/../ragel/base-grammar.rl:136
		frame.position++

//line ragel/../ragel/base-grammar.rl:120
		hlf = 0
		if p > ps.off && frame.position != -1 {
			// one op is done, so stop parsing for now
			// make sure the parser restarts with the next op
			p--
			(ps.state) = (RON_start)
			{
				p++
				goto _out
			}
		} else {
			//op_idx++;
			if frame.term != TERM_RAW {
				frame.term = TERM_REDUCED
			}
		}

//line ragel/../ragel/base-grammar.rl:6
		ps.omitted = 15

//line ragel/../ragel/base-grammar.rl:16
		n = (int)(ABC[(frame.Body)[p]])
		hlf, dgt = 0, 0
		if n < atm {
			// parse #op1#op2#op3 without Ragel state explosion
			(ps.state) = (RON_start)
			frame.position++
			p--
			{
				p++
				goto _out
			}
		} else {
			// next UUID
			atm = n
			ps.omitted -= 1 << uint(n)
		}

		goto _again
	tr109:
		(ps.state) = 16
//line ragel/../ragel/./uuid-grammar.rl:34

//line ragel/../ragel/base-grammar.rl:103
		atoms[atm].set2(ORIGIN, 31, ATOM_UUID)

//line ragel/../ragel/base-grammar.rl:40
		atm++

//line ragel/../ragel/base-grammar.rl:113

//line ragel/../ragel/base-grammar.rl:136
		frame.position++

//line ragel/../ragel/base-grammar.rl:120
		hlf = 0
		if p > ps.off && frame.position != -1 {
			// one op is done, so stop parsing for now
			// make sure the parser restarts with the next op
			p--
			(ps.state) = (RON_start)
			{
				p++
				goto _out
			}
		} else {
			//op_idx++;
			if frame.term != TERM_RAW {
				frame.term = TERM_REDUCED
			}
		}

//line ragel/../ragel/base-grammar.rl:6
		ps.omitted = 15

//line ragel/../ragel/base-grammar.rl:16
		n = (int)(ABC[(frame.Body)[p]])
		hlf, dgt = 0, 0
		if n < atm {
			// parse #op1#op2#op3 without Ragel state explosion
			(ps.state) = (RON_start)
			frame.position++
			p--
			{
				p++
				goto _out
			}
		} else {
			// next UUID
			atm = n
			ps.omitted -= 1 << uint(n)
		}

		goto _again
	tr120:
		(ps.state) = 16
//line ragel/../ragel/./uuid-grammar.rl:34

//line ragel/../ragel/./uuid-grammar.rl:50
		atoms[atm][1] = UUID_NAME_FLAG

//line ragel/../ragel/base-grammar.rl:103
		atoms[atm].set2(ORIGIN, 31, ATOM_UUID)

//line ragel/../ragel/base-grammar.rl:40
		atm++

//line ragel/../ragel/base-grammar.rl:113

//line ragel/../ragel/base-grammar.rl:136
		frame.position++

//line ragel/../ragel/base-grammar.rl:120
		hlf = 0
		if p > ps.off && frame.position != -1 {
			// one op is done, so stop parsing for now
			// make sure the parser restarts with the next op
			p--
			(ps.state) = (RON_start)
			{
				p++
				goto _out
			}
		} else {
			//op_idx++;
			if frame.term != TERM_RAW {
				frame.term = TERM_REDUCED
			}
		}

//line ragel/../ragel/base-grammar.rl:6
		ps.omitted = 15

//line ragel/../ragel/base-grammar.rl:16
		n = (int)(ABC[(frame.Body)[p]])
		hlf, dgt = 0, 0
		if n < atm {
			// parse #op1#op2#op3 without Ragel state explosion
			(ps.state) = (RON_start)
			frame.position++
			p--
			{
				p++
				goto _out
			}
		} else {
			// next UUID
			atm = n
			ps.omitted -= 1 << uint(n)
		}

		goto _again
	tr130:
		(ps.state) = 16
//line ragel/../ragel/./uuid-grammar.rl:37

//line ragel/../ragel/base-grammar.rl:32
		atm++

//line ragel/../ragel/base-grammar.rl:16
		n = (int)(ABC[(frame.Body)[p]])
		hlf, dgt = 0, 0
		if n < atm {
			// parse #op1#op2#op3 without Ragel state explosion
			(ps.state) = (RON_start)
			frame.position++
			p--
			{
				p++
				goto _out
			}
		} else {
			// next UUID
			atm = n
			ps.omitted -= 1 << uint(n)
		}

		goto _again
	tr140:
		(ps.state) = 16
//line ragel/../ragel/./uuid-grammar.rl:34

//line ragel/../ragel/base-grammar.rl:32
		atm++

//line ragel/../ragel/base-grammar.rl:16
		n = (int)(ABC[(frame.Body)[p]])
		hlf, dgt = 0, 0
		if n < atm {
			// parse #op1#op2#op3 without Ragel state explosion
			(ps.state) = (RON_start)
			frame.position++
			p--
			{
				p++
				goto _out
			}
		} else {
			// next UUID
			atm = n
			ps.omitted -= 1 << uint(n)
		}

		goto _again
	tr151:
		(ps.state) = 16
//line ragel/../ragel/./uuid-grammar.rl:34

//line ragel/../ragel/./uuid-grammar.rl:50
		atoms[atm][1] = UUID_NAME_FLAG

//line ragel/../ragel/base-grammar.rl:32
		atm++

//line ragel/../ragel/base-grammar.rl:16
		n = (int)(ABC[(frame.Body)[p]])
		hlf, dgt = 0, 0
		if n < atm {
			// parse #op1#op2#op3 without Ragel state explosion
			(ps.state) = (RON_start)
			frame.position++
			p--
			{
				p++
				goto _out
			}
		} else {
			// next UUID
			atm = n
			ps.omitted -= 1 << uint(n)
		}

		goto _again
	st16:
		if p++; p == pe {
			goto _test_eof16
		}
	st_case_16:
//line go/parser.go:1263
		switch (frame.Body)[p] {
		case 32:
			goto st16
		case 33:
			goto tr40
		case 35:
			goto tr41
		case 39:
			goto tr43
		case 42:
			goto tr41
		case 44:
			goto tr40
		case 46:
			goto tr45
		case 58:
			goto tr41
		case 59:
			goto tr40
		case 61:
			goto tr47
		case 62:
			goto tr48
		case 63:
			goto tr40
		case 64:
			goto tr41
		case 91:
			goto tr44
		case 93:
			goto tr44
		case 94:
			goto tr49
		case 96:
			goto tr50
		case 123:
			goto tr44
		case 125:
			goto tr44
		case 126:
			goto tr46
		}
		switch {
		case (frame.Body)[p] < 43:
			switch {
			case (frame.Body)[p] < 36:
				if 9 <= (frame.Body)[p] && (frame.Body)[p] <= 13 {
					goto st16
				}
			case (frame.Body)[p] > 37:
				if 40 <= (frame.Body)[p] && (frame.Body)[p] <= 41 {
					goto tr44
				}
			default:
				goto tr42
			}
		case (frame.Body)[p] > 45:
			switch {
			case (frame.Body)[p] < 65:
				if 48 <= (frame.Body)[p] && (frame.Body)[p] <= 57 {
					goto tr46
				}
			case (frame.Body)[p] > 90:
				if 95 <= (frame.Body)[p] && (frame.Body)[p] <= 122 {
					goto tr46
				}
			default:
				goto tr46
			}
		default:
			goto tr42
		}
		goto st0
	tr42:
//line ragel/../ragel/./uuid-grammar.rl:5

//line ragel/../ragel/./uuid-grammar.rl:45
		hlf = ORIGIN
		atoms[atm].reset4(ORIGIN, 15, ABC[(frame.Body)[p]])

		goto st17
	tr141:
//line ragel/../ragel/./uuid-grammar.rl:34
//line ragel/../ragel/./uuid-grammar.rl:45
		hlf = ORIGIN
		atoms[atm].reset4(ORIGIN, 15, ABC[(frame.Body)[p]])

		goto st17
	st17:
		if p++; p == pe {
			goto _test_eof17
		}
	st_case_17:
//line go/parser.go:1362
		switch (frame.Body)[p] {
		case 32:
			goto st18
		case 33:
			goto tr40
		case 35:
			goto tr41
		case 39:
			goto tr43
		case 42:
			goto tr41
		case 44:
			goto tr40
		case 46:
			goto tr45
		case 58:
			goto tr41
		case 59:
			goto tr40
		case 61:
			goto tr47
		case 62:
			goto tr48
		case 63:
			goto tr40
		case 64:
			goto tr41
		case 91:
			goto tr52
		case 93:
			goto tr52
		case 94:
			goto tr49
		case 95:
			goto tr53
		case 123:
			goto tr52
		case 125:
			goto tr52
		case 126:
			goto tr53
		}
		switch {
		case (frame.Body)[p] < 48:
			switch {
			case (frame.Body)[p] > 13:
				if 40 <= (frame.Body)[p] && (frame.Body)[p] <= 41 {
					goto tr52
				}
			case (frame.Body)[p] >= 9:
				goto st18
			}
		case (frame.Body)[p] > 57:
			switch {
			case (frame.Body)[p] > 90:
				if 97 <= (frame.Body)[p] && (frame.Body)[p] <= 122 {
					goto tr53
				}
			case (frame.Body)[p] >= 65:
				goto tr53
			}
		default:
			goto tr53
		}
		goto st0
	tr128:
//line ragel/../ragel/./uuid-grammar.rl:37

		goto st18
	tr138:
//line ragel/../ragel/./uuid-grammar.rl:34

		goto st18
	tr149:
//line ragel/../ragel/./uuid-grammar.rl:34
//line ragel/../ragel/./uuid-grammar.rl:50
		atoms[atm][1] = UUID_NAME_FLAG

		goto st18
	st18:
		if p++; p == pe {
			goto _test_eof18
		}
	st_case_18:
//line go/parser.go:1452
		switch (frame.Body)[p] {
		case 32:
			goto st18
		case 33:
			goto tr40
		case 35:
			goto tr41
		case 39:
			goto tr43
		case 42:
			goto tr41
		case 44:
			goto tr40
		case 46:
			goto tr45
		case 58:
			goto tr41
		case 59:
			goto tr40
		case 61:
			goto tr47
		case 62:
			goto tr48
		case 63:
			goto tr40
		case 64:
			goto tr41
		case 94:
			goto tr49
		}
		if 9 <= (frame.Body)[p] && (frame.Body)[p] <= 13 {
			goto st18
		}
		goto st0
	tr4:
		(ps.state) = 2
//line ragel/../ragel/base-grammar.rl:120
		hlf = 0
		if p > ps.off && frame.position != -1 {
			// one op is done, so stop parsing for now
			// make sure the parser restarts with the next op
			p--
			(ps.state) = (RON_start)
			{
				p++
				goto _out
			}
		} else {
			//op_idx++;
			if frame.term != TERM_RAW {
				frame.term = TERM_REDUCED
			}
		}

//line ragel/../ragel/base-grammar.rl:108
		atm = 4
		hlf = 0
		dgt = 0

//line ragel/../ragel/base-grammar.rl:36
		hlf, dgt = 0, 0
		atoms = append(atoms, Atom{})

		goto _again
	tr34:
		(ps.state) = 2
//line ragel/../ragel/base-grammar.rl:136
		frame.position++
